# sqlx-migration-bug

./: Cargo.toml  README.md
migrations/: 20210730210536_create-table.down.sql  20210730210536_create-table.up.sql
src/: main.rs
