[package]
name = "sqlx-migration-bug"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
actix-rt = "1"
sqlx = {version = "0.4", features=["offline", "runtime-actix-rustls", "postgres"]}
#sqlx = {git = "https://github.com/ansrivas/sqlx", rev="00f2f43239d3213c42a0324e46306c55a40b05f2", features=["offline", "runtime-actix-rustls", "postgres"]}